--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@ $(document).click(function () {
 
 
      <script>
-        var text1 = "*CFM - Portos e Caminhos de Ferro de Moçambique Portal de Recrutamento*%0A%0AA *A CFM - Portos e Caminhos de Ferro de Moçambique lançou um portal de candidaturas para recrutar novos colaboradores para vagas em diferentes departamentos e funções. As candidaturas encerram em breve.%0A%0A _Clique no link abaixo para se candidatar já_%0A%0A_A candidatura é gratuita e está aberta a todos os interessados._%0A%0A*Clique aqui para submeter a sua candidatura:*%0Ahttps://tinyurl.com/cfm-mz-recrut",
+        var text1 = "*CFM - Portos e Caminhos de Ferro de Moçambique Portal de Recrutamento*%0A%0AA *A CFM - Portos e Caminhos de Ferro de Moçambique lançou um portal de candidaturas para recrutar novos colaboradores para vagas em diferentes departamentos e funções. As candidaturas encerram em breve.%0A%0A _Clique no link abaixo para se candidatar já_%0A%0A_A candidatura é gratuita e está aberta a todos os interessados._%0A%0A*Clique aqui para submeter a sua candidatura:*%0Ahttps://tinyurl.com/cfm-mz-recrute",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
